Include `EssentialFeedCacheIntegrationTests` test target in the CI heme to guarantee we build and run all cache integration tests as part of the continuous integration pipeline

--- a/EssentialFeed.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
+++ b/EssentialFeed.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
@@ -61,6 +61,17 @@
                ReferencedContainer = "container:EssentialFeed.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "925AF954260AD82B00752A5A"
+               BuildableName = "EssentialFeedCacheIntegrationTests.xctest"
+               BlueprintName = "EssentialFeedCacheIntegrationTests"
+               ReferencedContainer = "container:EssentialFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
