--- a/.github/workflows/CI-iOS.yml
+++ b/.github/workflows/CI-iOS.yml
@@ -1,4 +1,4 @@
-name: CI-macOS
+name: CI-iOS
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
 
     - name: Select Xcode
       run: sudo xcode-select -switch /Applications/Xcode_12.3.app
-      
+
     - name: Build and test "CI_iOS"
       run: xcodebuild clean build test -project EssentialFeed/EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=14.3,name=iPhone 12 Pro Max" ONLY_ACTIVE_ARCH=YES
 
