--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -12,7 +12,7 @@
    # This workflow contains a single job called "build-and-deploy"
    build-and-deploy:
      # The type of runner that the job will run on
-     runs-on: macos-latest
+     runs-on: macos-11
 
      # Steps represent a sequence of tasks that will be executed as part of the job
      steps:
