--- a/.github/workflows/CI-macOS.yml
+++ b/.github/workflows/CI-macOS.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   build-and-test:
 
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_12.3.app
+      run: sudo xcode-select -switch /Applications/Xcode_13.1.app
 
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
